--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -1,3 +1,18 @@
 /* 
  * Custom CSS styles
  */
+
+/* needed esp. to center the gallery image elements */
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
